--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,16 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<!-- Home landing page -->
+
+
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="hero-unit" id="now-loading">
+			<h2><%= t(:header) %></h2>
+			<div class="progress progress-striped active">
+			  <div class="bar" style="width: 0%;" id="now-loading-bar"></div>
+			</div>
+		</div>
+		<%= render "items/partials/index" %> 
+	</div>
+</div>
+
+
