--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,8 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<!-- new user form -->
+<div class="container-fluid">
+  <div class="row">
+    <div class="span5 offset3">
+      <%= render "users/partials/signup", :user => @user %>
+    </div>
+  </div>
+</div>
