--- a/app/views/users/partials/_login.html.erb
+++ b/app/views/users/partials/_login.html.erb
@@ -1,5 +1,5 @@
 <!-- User login form -->
-<%= form_tag user_session_path, :method => "post", :remote => true do %>
+<%= form_tag user_session_path, :method => "post", :remote => remote do %>
   <fieldset>
   	<legend><%= t(:summary_login_user) %></legend>
   	<div class="control-group">
