--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,17 +21,6 @@
 					<li>
 						<%= link_to( image_tag("http://placehold.it/150x30") , root_path) %>
 					</li>
-					<li>
-						<% if user_signed_in? %>
-							<%= link_to content_tag(:i, "", :class => "icon-user") + current_user.company, user_path( current_user ) %>
-						<% else %>
-							<% { "plus" => t(:signup), "user" => t(:signin) }.each do |icon, tab| %>
-								<li>
-									<%= link_to content_tag(:i, "", :class => "icon-#{icon}") + tab, icon == "user" ? "#login" : new_user_path, :id => "nav-#{icon}-login" %>
-								</li>
-							<% end %>
-						<% end %>
-					</li>
 					<% { "shopping-cart" => t(:buy), "gift" => t(:sell) }.each do |icon, tab| %>
 						<li>
 							<a href='<%= icon=="gift" ? new_item_path : root_path + "#stock-items" %>'>
@@ -44,6 +33,18 @@
 							<%= text_field_tag :navbarsearch, "", :class => "search-query", :placeholder => "Search" %>
 						<% end %>
 					</li>
+					<% if user_signed_in? %>
+						<li><%= link_to content_tag(:i, "", :class => "icon-user") + current_user.company, user_path( current_user ) %></li>
+						<li>
+							<%= link_to content_tag(:i, "", :class => "icon-remove-sign") + t(:logout), destroy_user_session_path, :method => :delete %>
+						</li>
+					<% else %>
+						<% { "plus" => t(:signup), "user" => t(:signin) }.each do |icon, tab| %>
+							<li>
+								<%= link_to content_tag(:i, "", :class => "icon-#{icon}") + tab, icon == "user" ? "#login" : new_user_path, :id => "nav-#{icon}-login" %>
+							</li>
+						<% end %>
+					<% end %>
 				</ul>
 			</div>
 		</div>
