finally got that location controller workable on ducks. apparently, the issue was a problem with the routing and bids

--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -3,7 +3,14 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .itempicture { 
-	background-clip : content-box;
-	background-size : 100% 100%;
+	background-size : contain;
 	background-repeat : no-repeat;
+	background-position : center;
+	height : 145px;
+	width : 210px;
 } // itempicture
+
+.caption { 
+	background-color : #ffffff;
+	opacity : 0.65;
+}
