--- a/app/views/bids/partials/_new.html.erb
+++ b/app/views/bids/partials/_new.html.erb
@@ -1,14 +1,13 @@
 <!-- new bid form -->
-<%= form_for [@item, current_user.bids.new], :remote => remote do |f| %>
+<%= form_for [@item, @bid ], :remote => remote do |f| %>
 	<fieldset>
 		<legend><%= t(:new_bid_form) %></legendt>
 		<div class="control-group">
 			<%= f.label :offer, :class => "control-label" %>
 			<%= f.number_field :offer, :class => "input-small" %>
 			<%= f.select :units, options_for_select(["USD"]), :class => "input-small" %>
-			<%= f.label :tradeterm, :class => "control-label" %>
-			<%= f.select :tradeterm, :options_for_select(['ExWorks','FOB','FAS','CNF','CIF']), :class => "input-small" %>
 			<%= content_tag(:button, t(:bid), :class => "btn btn-success", :type => "submit" ) %>
 		</div>
 	</fieldset>
 <% end %>
+
