--- a/app/views/bids/partials/_edit.html.erb
+++ b/app/views/bids/partials/_edit.html.erb
@@ -1,12 +1,12 @@
-<!-- new bid form -->
-<%= form_for [@item, @bid ], :remote => remote do |f| %>
+<!-- edit bid form -->
+<%= form_for [@item, @bid], :method => "put", :remote => remote do |f| %>
 	<fieldset>
-		<legend><%= t(:new_bid_form) %></legendt>
+		<legend><%= t(:edit_bid_form) %></legendt>
 		<div class="control-group">
 			<%= f.label :offer, :class => "control-label" %>
 			<%= f.number_field :offer, :class => "input-small" %>
 			<%= f.select :units, options_for_select(["USD"]), :class => "input-small" %>
-			<%= content_tag(:button, t(:new_bid), :class => "btn btn-success", :type => "submit" ) %>
+			<%= content_tag(:button, t(:bid), :class => "btn btn-success", :type => "submit" ) %>
 		</div>
 	</fieldset>
 <% end %>
