--- a/app/views/users/partials/_signup.html.erb
+++ b/app/views/users/partials/_signup.html.erb
@@ -2,25 +2,20 @@
 <%= form_tag users_path, :method => "post", :class => "well" do %>
   <fieldset>
   	<legend><%= t(:summary_new_user) %></legend>
-  	<% ['email','password','phone','company'].map { |x| { :name => x, :placeholder => t(x) } }.each do |field| %>
+  	<% [:email, :password, :phone, :company].each do |field| %>
 			<div class="control-group">
-				<%= label_tag "user_#{field[:name]}", field[:name].capitalize, :class => "control-label" %>
-				<% case field[:name] %>
-					<% when 'email' %>
-						<%= email_field_tag( "user[#{field[:name]}]", "", :placeholder => "#{field[:placeholder]}", :class => "input-xlarge" )  %>
-					<% when 'phone' %>
-						<%= phone_field_tag( "user[#{field[:name]}]", "", :placeholder => "#{field[:placeholder]}", :class => "input-xlarge" )  %>
-					<% when 'password' %>
-						<%= password_field_tag( "user[#{field[:name]}]", "", :placeholder => "#{field[:placeholder]}", :class => "input-xlarge" )  %>
+				<%= label_tag "user_#{field.to_s}", field.capitalize, :class => "control-label" %>
+				<% case field %>
+					<% when :email, :password, :phone %>
+						<%= method((field.to_s + "_field_tag").to_sym).call("user[#{field.to_s}]", "", :placeholder => t((field.to_s + "_placeholder").to_sym), :class => "input-xlarge") %>
 					<% else %>
-						<%= text_field_tag( "user[#{field[:name]}]", "", :placeholder => "#{field[:placeholder]}", :class => "input-xlarge" )  %>
+						<%= text_field_tag( "user[#{field.to_s}]", "", :placeholder => t((field.to_s + "_placeholder").to_sym), :class => "input-xlarge" )  %>
 				<% end %>
-				<%= content_tag(:p, "TODO: context help", :class => "help-block") %>
+				<%= content_tag(:p, t((field.to_s + "_help").to_sym), :class => "help-block") %>
 			</div>
 		<% end %>
 		<div class="form-actions">
 			<button type="submit" class="btn btn-primary"><%= t(:submit) %></button>
-			<button class="btn"><%= t(:cancel) %></button>
 		</div>
   </fieldset>
 <% end %>  
