--- a/app/views/locations/partials/_edit.html.erb
+++ b/app/views/locations/partials/_edit.html.erb
@@ -1,11 +1,11 @@
 <!-- location edit form -->
 
-<%= form_for [parent, @location], :method => "put", :remote => remote, :class => "well" do |f| %>
+<%= form_for [parent, @location], :method => method, :remote => remote, :class => "well" do |f| %>
 	<fieldset>
   	<legend><%= t(:edit_location) %></legend>
   	<% {:shipping => "mini", :address => "large", :city => "small", :state => "mini inline", :zip => "mini inline", :country => "mini inlin" }.each do |field, style| %>
 			<div class="control-group">
-				<%= f.label field, :class => "control-label" %>
+				<%= f.label t(field), :class => "control-label" %>
 				<% case field %>
 					<% when :phone %>
 						<%= f.email_field field, :class => "input" + style %>
